<resources>
    <string name="welcome">Bienvenue</string>
    <string name="logo">logo</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="btnForgotPassword">Mot de passe oublié?</string>
    <string name="btnLoginRegister">Nouveau compte</string>
    <string name="btnLogin">CONNEXION</string>
    <string name="btnCreateAccount">CREATION</string>
    <string name="ReturnCreateAccount">Retour création de compte</string>
    <string name="menu_search">recherche</string>
    <string name="resolvedTicket">TICKETS RESOLUS</string>
    <string name="logout">DECONNEXION</string>
    <string name="app_name">Gestion tickets</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="menu_new_ticket">NOUVEAU TICKET</string>
    <string name="menu_tickets_en_attente">TICKETS EN ATTENTE</string>
    <string name="menu_tickets_en_cours">TICKETS EN COURS</string>
    <string name="menu_tickets_resolus">TICKETS RESOLUS</string>
    <string name="nav_tickets_en_attente">Tickets en attente</string>
    <string name="nav_tickets_en_cours">Tickets en cours</string>
    <string name="nav_tickets_resolus">Tickets résolus</string>
    <string name="btnLogout">DECONNEXION</string>
    <string name="nav_btnLogout">DECONNEXION</string>
    <string name="recent">Plus récent</string>
    <string name="ancien">Plus ancien</string>
    <string name="texte">texte</string>
    <string name="tiret">-</string>
    <string name="ticket">Ticket N°</string>
    <string name="open_description">open</string>
    <string name="filtre">Filtre</string>
    <string name="item">item</string>
    <string name="tickets_en_attente">tickets_en_attente</string>
    <string name="tickets_en_cours">tickets_en_cours</string>
    <string name="tickets_resolus">tickets_resolus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NEW">NEW</string>
    <string name="search_hint">rechercher</string>
    <string name="tickets_en_attente_main">Tickets en attente</string>
    <string name="tickets_en_cours_main">Tickets en cours</string>
    <string name="tickets_r_solus_main">Tickets résolus</string>
    <string name="attention">warning</string>
</resources>