<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_tickets_en_attente"
            android:icon="@drawable/waiting_ticket"
            android:title="@string/menu_tickets_en_attente" />
        <item
            android:id="@+id/nav_tickets_en_cours"
            android:icon="@drawable/onload_ticket"
            android:title="@string/menu_tickets_en_cours" />
        <item
            android:id="@+id/nav_tickets_resolus"
            android:icon="@drawable/resolved_ticket"
            android:title="@string/menu_tickets_resolus" />
        <item
            android:id="@+id/nav_btnLogout"
            android:icon="@drawable/logout"
            android:title="@string/btnLogout" />
    </group>
</menu>