<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity_login">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/niit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxStrokeColor="@color/selector"
            android:layout_marginTop="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:hint="@string/username"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/focus"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:drawableStart="@drawable/icon_username"
                android:drawablePadding="12dp"
                android:textSize="22sp">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            android:layout_below="@+id/Username"
            android:layout_alignStart="@+id/Username"
            android:layout_alignEnd="@+id/Username"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxStrokeColor="@color/selector"
            android:padding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/focus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icons_password"
                android:drawablePadding="12dp"
                android:textSize="22sp">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_below="@+id/Password"
            android:layout_alignEnd="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="-4dp"
            android:text="@string/btnForgotPassword"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/btnLoginRegister"
            android:layout_below="@+id/btnForgotPassword"
            android:layout_alignStart="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnLoginRegister"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@android:color/transparent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLoginRegister"
            android:layout_alignStart="@+id/Username"
            android:layout_alignEnd="@+id/Username"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/btnLogin"
            android:padding="12dp"
            android:textColorHint="#0F75AD"
            android:textSize="24sp"
            app:cornerRadius="8dp" />

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_below="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/white"/>

    </RelativeLayout>

</RelativeLayout>