<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/itemClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ticket_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/ticket"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticketNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiret"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/attention"
                android:padding="10dp"
                android:textSize="18sp"
                android:src="@drawable/warning" />

        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignParentRight="true" />

        <!-- btnArrow est défini en premier afin d'être référencé par newTicket -->
        <ImageView
            android:id="@+id/btnArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticket_info"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/open_description"
            android:src="@drawable/arrow_down" />

        <TextView
            android:id="@+id/newTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnArrow"
            android:layout_alignTop="@id/btnArrow"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/NEW"
            android:textColor="@color/black"
            android:background="@drawable/badge_new"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticket_info"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/newTicket"
            android:layout_alignTop="@id/btnArrow"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            android:singleLine="true" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_alignBottom="@id/description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
